force-app/main/default/objects/Income_Transaction__c/Income_Transaction__c.object-meta.xml
<CustomObject>
    <description>To record individual income transactions.</description>
    <label>Income Transaction</label>
    <nameField>
        <displayFormat>IN-{000000}</displayFormat>
        <label>Income Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>