force-app/main/default/objects/Income_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account (donor) from whom the income was received.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Income Transactions</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>