force-app/main/default/objects/Income_Transaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represent individual person who is doing Income Transaction like one time donation etc..</description>
    <inlineHelpText>Individual person who is doing Income Transaction (One time donation, payment etc..)</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Income Transactions</relationshipLabel>
    <relationshipName>Income_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>