force-app/main/default/objects/Income_Transaction__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account (donor) from whom the income was received.</description>
    <label>Donor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>