force-app/main/default/objects/Income_Transaction__c/fields/Income_Budget__c.field-meta.xml
<CustomField>
    <fullName>Income_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The income budget under which this income transaction falls.</description>
    <label>Income Budget</label>
    <referenceTo>Income_Budget__c</referenceTo>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>