force-app/main/default/objects/Income_Transaction__c/fields/Income_Transaction_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Income_Transaction_Fiscal_Year__c</fullName>
    <description>Transacion Fiscal year automatically calculated from Budget.</description>
    <formula>IF(
  NOT(ISBLANK(Income_Budget__c)),
  TEXT(Income_Budget__r.Fiscal_Year__c),
  IF(
    NOT(ISBLANK(Recurring_Donation__c)),
    TEXT(Recurring_Donation__r.Income_Budget__r.Fiscal_Year__c),
    NULL
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Same fiscal year with Income Budget Record.</inlineHelpText>
    <label>Income Transaction Fiscal Year</label>
    <type>Text</type>
</CustomField>