force-app/main/default/objects/Income_Transaction__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One - Time Donation</fullName>
            </value>
            <value>
                <fullName>Recurring Donation</fullName>
                <label>Recurring Donation (Himmet)</label>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Youth Program</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>