force-app/main/default/objects/Income_Transaction__c/fields/Recurring_Donation__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The recurring donation record associated with this income, if applicable.</description>
    <label>Recurring Donation</label>
    <referenceTo>Recurring_Donation__c</referenceTo>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>